# poirot

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: analyze_snippets.py
config/: client.py  server.py
core/: chat.py  context_pruning.py  dir_parsing_utils.py  entities.py  lexical_search.py  planning_prompts.py  poirot_bot.py  prompts.py  vector_db.py
dataclass/: files.py  separatedsnippets.py
utils/: code_validators.py  file_utils.py  hash.py  majority_vote.py  multi_query.py  openai_listwise_reranker.py  openai_proxy.py  repository_utils.py  str_utils.py  ticket_utils.py  tiktoken_utils.py  timer.py  tree_utils.py
